--- a/extDB/koth.ini
+++ b/extDB/koth.ini
@@ -9,6 +9,11 @@ Strip = true
 Strip Chars = `/\|;{}<>'
 Strip Chars Action = STRIP
 
+#
+#https://github.com/Torndeco/extdb/wiki/Calls:-Protocol--DB_CUSTOM_V5
+#
+#
+
 [existPlayerInfo]
 SQL1_1 = SELECT CASE
 SQL1_2 = 	WHEN EXISTS(SELECT * FROM PlayerInfo WHERE UID = '$INPUT_1') THEN 'true' ELSE 'false'
@@ -17,39 +22,41 @@ SQL1_3 = END
 Number of Inputs = 1
 
 [insertPlayerStats]
-SQL1_1 = INSERT INTO PlayerInfo (UID, Name, BattlEyeGUID)
+SQL1_1 = INSERT INTO PlayerInfo (UID, Name, GUID)
 SQL1_2 = VALUES ('$INPUT_1', '$INPUT_STRING_2', '$INPUT_BEGUID_1');
 SQL2_1 = INSERT INTO PlayerSave 
-SQL2_2 = (PlayerUID, CreationDate, LastModified) 
+SQL2_2 = (UID, CreationDate, LastModified) 
 SQL2_3 = VALUES ('$INPUT_1', NOW(), NOW());
 
 Number of Inputs = 2
 
+[insertPlayerSave]
+SQL1_1 = SELECT 
+SQL1_2 = 	ammo, weapons, items, assignitems,  headgear, goggles, vest, vestitems,uniform, uniformitems, backpack, packitems, handgunitems, primarywep, secondarywep
+SQL1_3 = FROM PlayerSave WHERE UID = '$INPUT_1';
+
+Number of Inputs = 1
+
+[selectPlayerStats]
+SQL1_1 = SELECT 
+SQL1_2 = 	XP, Kills, Deaths
+SQL1_3 = FROM PlayerInfo WHERE UID = '$INPUT_1';
+
+Number of Inputs = 1
+
 [UpdatePlayerStats]
 SQL1_1 = UPDATE PlayerInfo
-SQL1_2 = 	SET XP='$INPUT_2', Kills='$INPUT_3', Deaths='$INPUT_4'
+SQL1_2 = 	SET XP='$INPUT_STRING_2', Kills='$INPUT_STRING_3', Deaths='$INPUT_STRING_4'
 SQL1_3 = WHERE UID = '$INPUT_1';
 
 Number of Inputs = 4
 
-[updatePlayerLoadout]
+[updatePlayerSaveAll]
 SQL1_1 = UPDATE PlayerSave
-SQL1_2 = 	SET CurrentWeapon='$INPUT_2',
-SQL1_3 = 		UniformWeapons='$INPUT_3', UniformItems='$INPUT_4', UniformMagazines='$INPUT_5', VestWeapons='$INPUT_6', VestItems='$INPUT_7',
-SQL1_4 = 		VestMagazines='$INPUT_8', BackpackWeapons='$INPUT_9', BackpackItems='$INPUT_10', BackpackMagazines='$INPUT_11',
-SQL1_5 =			Uniform='$INPUT_STRING_12', Vest='$INPUT_STRING_13', Backpack='$INPUT_STRING_14', Goggles='$INPUT_STRING_15', Headgear='$INPUT_STRING_16',
-SQL1_6 =			PrimaryWeapon='$INPUT_STRING_17', SecondaryWeapon='$INPUT_STRING_18', HandgunWeapon='$INPUT_STRING_19',
-SQL1_7 = 		PrimaryWeaponItems='$INPUT_20', SecondaryWeaponItems='$INPUT_21', HandgunItems='$INPUT_22',
-SQL1_9 = 		AssignedItems='$INPUT_23', LoadedMagazines='$INPUT_24'
-SQL1_10 = WHERE PlayerUID='$INPUT_1';
+SQL1_2 = 	SET ammo='$INPUT_2',
+SQL1_3 = 		weapons='$INPUT_3', items='$INPUT_4', assignitems='$INPUT_5', headgear='$INPUT_6', goggles='$INPUT_7',
+SQL1_4 = 		vest='$INPUT_8', vestitems='$INPUT_9', uniform='$INPUT_10', uniformitems='$INPUT_11',
+SQL1_5 =			backpack='$INPUT_STRING_12', packitems='$INPUT_STRING_13', handgunitems='$INPUT_STRING_14', primarywep='$INPUT_STRING_15', secondarywep='$INPUT_STRING_16'
+SQL1_7 = WHERE UID='$INPUT_1';
 
-Number of Inputs = 24
-
-[getPlayerSave]
-SQL1_1 = SELECT 
-SQL1_2 = 	CurrentWeapon, Headgear, Goggles, Uniform,  Vest, Backpack, UniformWeapons, UniformItems,
-SQL1_3 = 	UniformMagazines, VestWeapons, VestItems, VestMagazines, BackpackWeapons, BackpackItems, BackpackMagazines, PrimaryWeapon, SecondaryWeapon, HandgunWeapon,
-SQL1_4 = 	PrimaryWeaponItems, SecondaryWeaponItems, HandgunItems, AssignedItems, LoadedMagazines
-SQL1_5 = FROM PlayerSave WHERE PlayerUID = '$INPUT_1';
-
-Number of Inputs = 1
+Number of Inputs = 16
