--- a/extDB/koth.ini
+++ b/extDB/koth.ini
@@ -1,62 +1,69 @@
 [Default]
 Version = 7
 
-Number of Inputs = 0
 Sanitize Input Value Check = false
 Sanitize Output Value Check = false
+
 String Datatype Check = false
 Strip = true
-Strip Chars = `/\|;{}<>'
+Strip Chars = \/|;{}<>`'`
+
 Strip Chars Action = STRIP
 
-#
-#https://github.com/Torndeco/extdb/wiki/Calls:-Protocol--DB_CUSTOM_V5
-#
-#
+Prepared Statement Cache = true
 
 [existPlayerInfo]
 SQL1_1 = SELECT CASE
-SQL1_2 = 	WHEN EXISTS(SELECT * FROM PlayerInfo WHERE UID = '$INPUT_1') THEN 'true' ELSE 'false'
+SQL1_2 = 	WHEN EXISTS(SELECT * FROM PlayerInfo WHERE UID = ?) THEN 'true' ELSE 'false'
 SQL1_3 = END
 
 Number of Inputs = 1
+SQL1_INPUTS = 1
 
 [insertPlayerStats]
 SQL1_1 = INSERT INTO PlayerInfo (UID, Name, GUID)
-SQL1_2 = VALUES ('$INPUT_1', '$INPUT_STRING_2', '$INPUT_BEGUID_1');
+SQL1_2 = VALUES (?, ?, ?);
 SQL2_1 = INSERT INTO PlayerSave 
-SQL2_2 = (UID, CreationDate, LastModified) 
-SQL2_3 = VALUES ('$INPUT_1', NOW(), NOW());
+SQL2_2 = (UID) 
+SQL2_3 = VALUES (?);
 
 Number of Inputs = 2
+SQL1_INPUTS = 1, 2, 1-BEGUID
+SQL2_INPUTS = 1
 
 [insertPlayerSave]
 SQL1_1 = SELECT 
-SQL1_2 = 	ammo, weapons, items, assignitems,  headgear, goggles, vest, vestitems,uniform, uniformitems, backpack, packitems, handgunitems, primarywep, secondarywep
-SQL1_3 = FROM PlayerSave WHERE UID = '$INPUT_1';
+SQL1_2 = 	Headgear, Goggles, Uniform,  Vest, Backpack, UniformWeapons, UniformItems,
+SQL1_3 = 	UniformMagazines, VestWeapons, VestItems, VestMagazines, BackpackWeapons, BackpackItems, BackpackMagazines, PrimaryWeapon, SecondaryWeapon, HandgunWeapon,
+SQL1_4 = 	PrimaryWeaponItems, SecondaryWeaponItems, HandgunItems, AssignedItems, LoadedMagazines
+SQL1_3 = FROM PlayerSave WHERE UID = ?;
 
 Number of Inputs = 1
+SQL1_INPUTS = 1
 
 [selectPlayerStats]
 SQL1_1 = SELECT 
 SQL1_2 = 	XP, Kills, Deaths
-SQL1_3 = FROM PlayerInfo WHERE UID = '$INPUT_1';
+SQL1_3 = FROM PlayerInfo WHERE UID = ?;
 
 Number of Inputs = 1
+SQL1_INPUTS = 1
 
 [UpdatePlayerStats]
 SQL1_1 = UPDATE PlayerInfo
-SQL1_2 = 	SET XP='$INPUT_STRING_2', Kills='$INPUT_STRING_3', Deaths='$INPUT_STRING_4'
-SQL1_3 = WHERE UID = '$INPUT_1';
+SQL1_2 = 	SET XP=?, Kills=?, Deaths=?
+SQL1_3 = WHERE UID = ?;
 
 Number of Inputs = 4
+SQL1_INPUTS = 2, 3, 4, 1
 
-[updatePlayerSaveAll]
+[updatePlayerSave]
 SQL1_1 = UPDATE PlayerSave
-SQL1_2 = 	SET ammo='$INPUT_2',
-SQL1_3 = 		weapons='$INPUT_3', items='$INPUT_4', assignitems='$INPUT_5', headgear='$INPUT_6', goggles='$INPUT_7',
-SQL1_4 = 		vest='$INPUT_8', vestitems='$INPUT_9', uniform='$INPUT_10', uniformitems='$INPUT_11',
-SQL1_5 =			backpack='$INPUT_STRING_12', packitems='$INPUT_STRING_13', handgunitems='$INPUT_STRING_14', primarywep='$INPUT_STRING_15', secondarywep='$INPUT_STRING_16'
-SQL1_7 = WHERE UID='$INPUT_1';
+SQL1_2 = 	SET UniformWeapons=?, UniformItems=?, UniformMagazines=?, VestWeapons=?, VestItems=?,
+SQL1_5 = 		VestMagazines=?, BackpackWeapons=?, BackpackItems=?, BackpackMagazines=?,
+SQL1_6 =		Uniform=?, Vest=?, Backpack=?, Goggles=?, Headgear=?, PrimaryWeapon=?, SecondaryWeapon=?, HandgunWeapon=?,
+SQL1_7 = 		PrimaryWeaponItems=?, SecondaryWeaponItems=?, HandgunItems=?, AssignedItems=?, LoadedMagazines=?
+SQL1_8 = WHERE UID=?;
 
-Number of Inputs = 16
+Number of Inputs = 23
+SQL1_INPUTS = 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 1 
