--- a/extDB/koth.ini
+++ b/extDB/koth.ini
@@ -21,14 +21,13 @@ Number of Inputs = 1
 SQL1_INPUTS = 1
 
 [insertPlayerStats]
-SQL1_1 = INSERT INTO PlayerInfo (UID, Name, GUID)
-SQL1_2 = VALUES (?, ?, ?);
-SQL2_1 = INSERT INTO PlayerSave 
-SQL2_2 = (UID) 
-SQL2_3 = VALUES (?);
+SQL1_1 = INSERT INTO PlayerInfo (UID, Name, GUID, XP, Kills, Deaths)
+SQL1_2 = VALUES (?, ?, ?, ?, ?);
+SQL2_1 = INSERT INTO PlayerSave (UID) 
+SQL2_2 = VALUES (?); 
 
-Number of Inputs = 2
-SQL1_INPUTS = 1, 2, 1-BEGUID
+Number of Inputs = 5
+SQL1_INPUTS = 1, 2, 1-BEGUID, 3, 4, 5
 SQL2_INPUTS = 1
 
 [insertPlayerSave]
