--- a/extDB/koth.ini
+++ b/extDB/koth.ini
@@ -22,7 +22,7 @@ SQL1_INPUTS = 1
 
 [insertPlayerStats]
 SQL1_1 = INSERT INTO PlayerInfo (UID, Name, GUID, XP, Kills, Deaths)
-SQL1_2 = VALUES (?, ?, ?, ?, ?);
+SQL1_2 = VALUES (?, ?, ?, ?, ?, ?);
 SQL2_1 = INSERT INTO PlayerSave (UID) 
 SQL2_2 = VALUES (?); 
 
