--- a/extDB2/sql_custom/koth.ini
+++ b/extDB2/sql_custom/koth.ini
@@ -1,19 +1,26 @@
 [Default]
-Version = 7
-
+Version = 8
+ 
 Sanitize Input Value Check = false
-Sanitize Output Value Check = false
-
-String Datatype Check = false
-Strip = true
-Strip Chars = \/|;{}<>`'`
-
-Strip Chars Action = STRIP
+Sanitize Output Value Check = false 
 
 Prepared Statement Cache = true
 
-##https://github.com/Torndeco/extdb/wiki/Calls:-Protocol--DB_CUSTOM_V5
+Return InsertID = false
 
+Strip = false
+Strip Chars Action = STRIP
+Strip Chars = \/\|;{}<>\'
+Strip Custom Chars = \/\|;{}<>\'
+
+;; INPUT / OUTPUT Options
+;;   	String (Removes " from value, then wraps value with ")
+;;     	BeGUID (Converts value into BEGUID)
+;;     	Check (Sanitize value check)
+;;     	NoCheck
+;;     	Strip (Strips Chars)
+;;     	NoStrip
+;;___________________________________________________________________________________________
 [existPlayerInfo]
 SQL1_1 = SELECT CASE
 SQL1_2 = 	WHEN EXISTS(SELECT * FROM PlayerInfo WHERE UID = ?) THEN 'true' ELSE 'false'
